# rpg-c

./: .clangd  .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja
game-scripts/: main.lua  overworld.lua
game-scripts/meta/: types.lua
includes/: types.h
src/: main.c
